# navis-cli

./: README.md  config.py  crud.py  functional_manager.py  navis.py  project_manager.py  pyproject.toml
