[project]
name = "navis"
version = "0.1.0"
description = "This is a smart assistant called navis."
authors = [
    {name = "Antonius Wrana",email = "ak785.755@e-mail.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "rich (>=14.3.3,<15.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyfiglet (>=1.0.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
navis = "navis:cli" # entry point